--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 coveralls==1.8.2
+cv==1.0.0.dev5
 Jinja2==2.10.1
 python-slugify==3.0.3
 mistune==0.8.4
@@ -6,7 +7,5 @@ mkdocs==1.0.4
 mypy==0.720
 pytest==4.4.1
 pytest-cov==2.6.1
-requests==2.22.0
-serious==1.0.0.dev18
 twine==1.13.0
 wheel==0.33.6
