--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-coveralls==1.8.2
-cv==1.0.0.dev6
-feedgen==0.7.0
-Jinja2==2.10.1
-libsass==0.19.2
-mistune==0.8.4
-mkdocs==1.0.4
-mypy==0.720
-pytest==4.4.1
-pytest-cov==2.6.1
-python-slugify==3.0.3
-twine==1.13.0
-wheel==0.33.6
+coveralls>=1.8.2
+cv>=1.0.0rc0
+feedgen>=0.7.0
+Jinja2>=2.10.1
+libsass>=0.19.2
+mistune>=0.8.4
+mkdocs>=1.0.4
+mypy>=0.720
+pytest>=4.4.1
+pytest-cov>=2.6.1
+python-slugify>=3.0.3
+twine>=1.13.0
+wheel>=0.33.6
