--- a/examples/markdown-blog/nginx.conf
+++ b/examples/markdown-blog/nginx.conf
@@ -56,5 +56,16 @@ http {
         location / {
             try_files $uri $uri.html $uri/index.html =404;
         }
+
+        location = /id {
+            try_files /id =404;
+
+            # kill cache
+            add_header Last-Modified $date_gmt;
+            add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+            if_modified_since off;
+            expires off;
+            etag off;
+        }
     }
 }
