--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ mkdocs>=1.0.4
 mypy>=0.720
 pytest>=4.4.1
 pytest-cov>=2.6.1
+python-frontmatter>=0.4.5
 python-slugify>=3.0.3
 twine>=1.13.0
 watchdog>=0.9.0
