--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# dev-dependencies
 coveralls>=1.8.2
 cv>=1.0.0rc0
 feedgen>=0.7.0
@@ -7,9 +8,10 @@ mistune>=0.8.4
 mkdocs>=1.0.4
 mypy>=0.720
 pytest>=4.4.1
+pytest-asyncio>=0.10.0
 pytest-cov>=2.6.1
 python-frontmatter>=0.4.5
 python-slugify>=3.0.3
 twine>=1.13.0
-watchdog>=0.9.0
+watchgod>=0.5.0
 wheel>=0.33.6
