--- a/.release-pipeline.yml
+++ b/.release-pipeline.yml
@@ -81,7 +81,7 @@ stages:
           - script: git checkout master
             displayName: 'Checkout master'
 
-          - script: cd tests && pytest --cov=lightweight --cov-report=html
+          - script: cd tests && PYTHONPATH=$(Agent.BuildDirectory):$PYTHONPATH pytest --cov=lightweight --cov-report=html
             displayName: 'Test with coverage'
 
           - script: cd tests && coveralls
