--- a/.pr-pipeline.yml
+++ b/.pr-pipeline.yml
@@ -20,7 +20,7 @@ stages:
               python.version: '3.7'
         steps:
           - template: .use-python.yml
-          - script: cd tests && pytest
+          - script: PYTHONPATH=$(Agent.BuildDirectory):$PYTHONPATH  cd tests && pytest
             displayName: 'Test'
 
       - job: Typings
@@ -60,7 +60,7 @@ stages:
           - script: git checkout $(System.PullRequest.SourceBranch)
             displayName: 'Checkout branch'
 
-          - script: cd tests && PYTHONPATH=$(Agent.BuildDirectory):$PYTHONPATH pytest --cov=lightweight --cov-report=html
+          - script: PYTHONPATH=$(Agent.BuildDirectory):$PYTHONPATH cd tests && pytest --cov=lightweight --cov-report=html
             displayName: 'Test with coverage'
 
           - script: cd tests && coveralls
