--- a/.release-pipeline.yml
+++ b/.release-pipeline.yml
@@ -20,7 +20,7 @@ stages:
               python.version: '3.7'
         steps:
           - template: .use-python.yml
-          - script: PYTHONPATH=$(Agent.BuildDirectory):$PYTHONPATH cd tests && pytest
+          - script: PYTHONPATH=$(Build.Repository.LocalPath):$PYTHONPATH cd tests && pytest
             displayName: 'Test'
 
       - job: Typings
@@ -81,7 +81,7 @@ stages:
           - script: git checkout master
             displayName: 'Checkout master'
 
-          - script: PYTHONPATH=$(Agent.BuildDirectory):$PYTHONPATH cd tests && pytest --cov=lightweight --cov-report=html
+          - script: PYTHONPATH=$(Build.Repository.LocalPath):$PYTHONPATH cd tests && pytest --cov=lightweight --cov-report=html
             displayName: 'Test with coverage'
 
           - script: cd tests && coveralls
