--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 # dev-dependencies
-coveralls~=1.8.2
-cv~=1.0
-Jinja2~=2.11
-libsass~=0.19.2
-mistune~=0.8.4
-mypy~=0.720
-pytest~=4.4
-pytest-asyncio~=0.10.0
-pytest-cov~=2.6.1
-python-frontmatter~=0.4.5
-python-slugify~=3.0.3
-twine~=1.13
-watchgod~=0.5.0
-wheel~=0.33
+coveralls==3.3.1
+cv==1.0.0
+Jinja2==3.1.2
+libsass==0.22.0
+MarkupSafe==2.0.1
+mistune==0.8.4
+mypy==0.991
+pytest==7.4.2
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+python-frontmatter==0.4.5
+python-slugify==3.0.6
+twine==1.15.0
+watchgod==0.8.2
+wheel==0.41.2
