--- a/.pr-pipeline.yml
+++ b/.pr-pipeline.yml
@@ -13,11 +13,11 @@ stages:
     jobs:
       - job: Tests
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
-            Python37:
-              python.version: '3.7'
+            Python310:
+              python.version: '3.10'
         steps:
           - template: .use-python.yml
           - script: cd tests && PYTHONPATH=$(Build.Repository.LocalPath):$PYTHONPATH pytest
@@ -25,11 +25,11 @@ stages:
 
       - job: Typings
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
-            Python37:
-              python.version: '3.7'
+            Python310:
+              python.version: '3.10'
         steps:
           - template: .use-python.yml
           - script: mypy lightweight
@@ -37,11 +37,11 @@ stages:
 
       - job: Version
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
-            Python37:
-              python.version: '3.7'
+            Python310:
+              python.version: '3.10'
         steps:
           - template: .use-python.yml
           - script: cv lightweight --dev
@@ -49,11 +49,11 @@ stages:
 
       - job: TestCoverage
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
-            Python37:
-              python.version: '3.7'
+            Python310:
+              python.version: '3.10'
         steps:
           - template: .use-python.yml
 
