--- a/.release-pipeline.yml
+++ b/.release-pipeline.yml
@@ -13,7 +13,7 @@ stages:
     jobs:
       - job: Tests
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
             Python310:
@@ -25,7 +25,7 @@ stages:
 
       - job: Typings
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
             Python310:
@@ -37,7 +37,7 @@ stages:
 
       - job: Version
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
             Python310:
@@ -51,7 +51,7 @@ stages:
     jobs:
       - job: PyPI
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
             Python310:
@@ -70,7 +70,7 @@ stages:
     jobs:
       - job: TestCoverage
         pool:
-          vmImage: 'Ubuntu-16.04'
+          vmImage: 'ubuntu-latest'
         strategy:
           matrix:
             Python310:
